# azure-iot-sdks

c/: CMakeLists.txt
c/common/: CMakeLists.txt
c/common/tests/: CMakeLists.txt
c/common/tests/agenttime_unittests/: CMakeLists.txt
c/common/tests/base64_unittests/: CMakeLists.txt
c/common/tests/buffer_unittests/: CMakeLists.txt
c/common/tests/crtabstractions_unittests/: CMakeLists.txt
c/common/tests/doublylinkedlist_unittests/: CMakeLists.txt
c/common/tests/gballoc_unittests/: CMakeLists.txt
c/common/tests/gballoc_without_init_unittests/: CMakeLists.txt
c/common/tests/hmacsha256_unittests/: CMakeLists.txt
c/common/tests/httpapiex_unittests/: CMakeLists.txt
c/common/tests/httpapiexsas_unittests/: CMakeLists.txt
c/common/tests/httpheaders_unittests/: CMakeLists.txt
c/common/tests/lock_unittests/: CMakeLists.txt
c/common/tests/map_unittests/: CMakeLists.txt
c/common/tests/sastoken_unittests/: CMakeLists.txt
c/common/tests/string_tokenizer_unittests/: CMakeLists.txt
c/common/tests/strings_unittests/: CMakeLists.txt
c/common/testtools/: CMakeLists.txt
c/iothub_client/: CMakeLists.txt
c/iothub_client/samples/: CMakeLists.txt
c/iothub_client/tests/: CMakeLists.txt
c/iothub_client/tests/iothubclient_e2etests/: CMakeLists.txt
c/iothub_client/tests/iothubclient_ll_unittests/: CMakeLists.txt
c/iothub_client/tests/iothubclient_unittests/: CMakeLists.txt
c/iothub_client/tests/iothubmessage_unittests/: CMakeLists.txt
c/iothub_client/tests/iothubtransportamqp_unittests/: CMakeLists.txt
c/iothub_client/tests/iothubtransporthttp_unittests/: CMakeLists.txt
c/iothub_client/tests/iothubtransportmqtt_unittests/: CMakeLists.txt
c/iothub_client/tests/longhaul_tests/: CMakeLists.txt
c/iothub_client/tests/mqttapi_paho_unittests/: CMakeLists.txt
c/iothub_client/tests/version_unittests/: CMakeLists.txt
c/serializer/: CMakeLists.txt
c/serializer/samples/: CMakeLists.txt
c/serializer/tests/: CMakeLists.txt
c/testtools/: CMakeLists.txt
c/testtools/ctest/: CMakeLists.txt
c/testtools/ctest/unittests/ctestunittests/: CMakeLists.txt
c/testtools/iothub_test/: CMakeLists.txt
c/testtools/micromock/: CMakeLists.txt
c/testtools/sal/: CMakeLists.txt
c/testtools/testrunnerswitcher/: CMakeLists.txt
(+32 files in other folders)
